@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.9.28-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-28 12:06:21, took 00:13:53, with 50 workers, on 4052 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2025-09-28 12:32:58, took 00:14:09, with 50 workers, on 4054 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -397,20 +397,21 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ppp03.tst">conn-ppp03.tst</a></td><td>success</td><td>ppp with radius authentication</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ppp04.tst">conn-ppp04.tst</a></td><td>success</td><td>ppp with tacacs authentication</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ppp05.tst">conn-ppp05.tst</a></td><td>success</td><td>ppp with ldap authentication</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp06.tst">conn-ppp06.tst</a></td><td>success</td><td>ppp with chap authentication</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp07.tst">conn-ppp07.tst</a></td><td>success</td><td>ppp with eap authentication</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp06.tst">conn-ppp06.tst</a></td><td>success</td><td>ppp with pap authentication</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp07.tst">conn-ppp07.tst</a></td><td>success</td><td>ppp with chap authentication</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ppp08.tst">conn-ppp08.tst</a></td><td>success</td><td>ppp with eap authentication</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp09.tst">conn-ppp09.tst</a></td><td>success</td><td>ppp routes with radius authentication</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp10.tst">conn-ppp10.tst</a></td><td>success</td><td>ppp with short multilink fragmentation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp09.tst">conn-ppp09.tst</a></td><td>success</td><td>ppp routes with local authentication</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp10.tst">conn-ppp10.tst</a></td><td>success</td><td>ppp routes with radius authentication</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ppp11.tst">conn-ppp11.tst</a></td><td>success</td><td>ppp with short multilink fragmentation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp12.tst">conn-ppp12.tst</a></td><td>success</td><td>ppp with asymmetric multilink fragmentation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp13.tst">conn-ppp13.tst</a></td><td>success</td><td>ppp with asymmetric multilink</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp14.tst">conn-ppp14.tst</a></td><td>success</td><td>ppp address propagation</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp15.tst">conn-ppp15.tst</a></td><td>success</td><td>ppp labeled gateway</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp16.tst">conn-ppp16.tst</a></td><td>success</td><td>ppp no remote address</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp17.tst">conn-ppp17.tst</a></td><td>success</td><td>ppp no local address</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp18.tst">conn-ppp18.tst</a></td><td>success</td><td>ppp policy with local authentication</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp19.tst">conn-ppp19.tst</a></td><td>success</td><td>ppp policy with radius authentication</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp12.tst">conn-ppp12.tst</a></td><td>success</td><td>ppp with long multilink fragmentation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp13.tst">conn-ppp13.tst</a></td><td>success</td><td>ppp with asymmetric multilink fragmentation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp14.tst">conn-ppp14.tst</a></td><td>success</td><td>ppp with asymmetric multilink</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp15.tst">conn-ppp15.tst</a></td><td>success</td><td>ppp address propagation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp16.tst">conn-ppp16.tst</a></td><td>success</td><td>ppp labeled gateway</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp17.tst">conn-ppp17.tst</a></td><td>success</td><td>ppp no remote address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp18.tst">conn-ppp18.tst</a></td><td>success</td><td>ppp no local address</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp19.tst">conn-ppp19.tst</a></td><td>success</td><td>ppp policy with local authentication</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-ppp20.tst">conn-ppp20.tst</a></td><td>success</td><td>ppp policy with radius authentication</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pppoe01.tst">conn-pppoe01.tst</a></td><td>success</td><td>pppoe over ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pppoe02.tst">conn-pppoe02.tst</a></td><td>success</td><td>pppoe over bridge encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-pppoe03.tst">conn-pppoe03.tst</a></td><td>success</td><td>ppp relay over pppoe</td></tr>
@@ -4046,6 +4047,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-dyndest.tst">serv-dyndest.tst</a></td><td>success</td><td>dynamic tunnel destination</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-eventmgr.tst">serv-eventmgr.tst</a></td><td>success</td><td>event manager</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-forward.tst">serv-forward.tst</a></td><td>success</td><td>forwarder server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/serv-ldap.tst">serv-ldap.tst</a></td><td>success</td><td>ldap server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-loadbal.tst">serv-loadbal.tst</a></td><td>success</td><td>load balancer server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-proxy.tst">serv-proxy.tst</a></td><td>success</td><td>proxy server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-radius.tst">serv-radius.tst</a></td><td>success</td><td>radius server</td></tr>
