@@ -17557,3 +17557,10 @@ no qc pass: ppp with pap authentication
 qc pass: ppp with ldap authentication
 qc pass: ppp with eap authentication
 qc pass: ppp with short multilink fragmentation
+---------------------------------- 2025-09-28 12:18:48 25.9.28
+no qc pass: ppp with short multilink fragmentation
+no qc pass: ppp with eap authentication
+qc pass: ppp with pap authentication
+qc pass: ppp routes with local authentication
+qc pass: ppp with long multilink fragmentation
+qc pass: ldap server
